force-app/main/default/objects/Lead/fields/Append_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Append_Address_City__c</fullName>
    <description>City derived from email address</description>
    <inlineHelpText>City derived from email address</inlineHelpText>
    <label>Appended City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>