force-app/main/default/objects/Lead/fields/Append_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Append_Address_Street__c</fullName>
    <description>Street address derived from email address</description>
    <inlineHelpText>Street address derived from email address</inlineHelpText>
    <label>Appended Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>