force-app/main/default/objects/Lead/fields/Append_Demo_Age__c.field-meta.xml
<CustomField>
    <fullName>Append_Demo_Age__c</fullName>
    <description>Age Range. 18-20; 21-24; 25-34; 35-44; 45-54; 55-64; 65+</description>
    <inlineHelpText>Age Range. 18-20; 21-24; 25-34; 35-44; 45-54; 55-64; 65+</inlineHelpText>
    <label>Age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>