force-app/main/default/objects/Lead/fields/Append_Demo_Gender__c.field-meta.xml
<CustomField>
    <fullName>Append_Demo_Gender__c</fullName>
    <description>Gender of the input individual. Male or Female</description>
    <inlineHelpText>Gender of the input individual. Male or Female</inlineHelpText>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>