force-app/main/default/objects/Lead/fields/Append_Demo_Zip__c.field-meta.xml
<CustomField>
    <fullName>Append_Demo_Zip__c</fullName>
    <description>Location-based data by zip code</description>
    <inlineHelpText>Location-based data by zip code</inlineHelpText>
    <label>Location By Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>