force-app/main/default/objects/Lead/fields/Append_House_Children__c.field-meta.xml
<CustomField>
    <fullName>Append_House_Children__c</fullName>
    <description>Indicates whether there are 1 or more children in the household.</description>
    <inlineHelpText>Indicates whether there are 1 or more children in the household.</inlineHelpText>
    <label>Presence of Children in House</label>
    <length>255</length>
    <type>Text</type>
</CustomField>