force-app/main/default/objects/Lead/fields/Append_House_Income__c.field-meta.xml
<CustomField>
    <fullName>Append_House_Income__c</fullName>
    <description>Income of household by range. 0-15k; 15k-25k; 25k-35k; 35k-50k; 50k-75k; 75k-100k; 100k-125k; 125k-150k; 150k-175k; 175k-200k; 200k-250k; 250k+</description>
    <inlineHelpText>Income of household by range. 0-15k; 15k-25k; 25k-35k; 35k-50k; 50k-75k; 75k-100k; 100k-125k; 125k-150k; 150k-175k; 175k-200k; 200k-250k; 250k+</inlineHelpText>
    <label>Household Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>