force-app/main/default/objects/Lead/fields/Append_House_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Append_House_Occupation__c</fullName>
    <description>Householder occupation type as follows: Blue Collar Worker; Business Owner; Civil Service; Technology; Executive/Upper Management; Health Services; Homemaker; Middle Management; Military Personnel; Nurse; Part Time; Professional; Retired; Secretary; Student; Teacher; White Collar Worker</description>
    <inlineHelpText>Householder occupation type as follows: Blue Collar Worker; Business Owner; Civil Service; Technology; Executive/Upper Management; Health Services; Homemaker; Middle Management; Military Personnel; Nurse; Part Time; Professional; Retired; Secretary; Stude</inlineHelpText>
    <label>Occupation Type in Household</label>
    <length>255</length>
    <type>Text</type>
</CustomField>