force-app/main/default/objects/Lead/fields/Append_Interest_Blogging__c.field-meta.xml
<CustomField>
    <fullName>Append_Interest_Blogging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Interest in blogging</description>
    <inlineHelpText>Interest in blogging</inlineHelpText>
    <label>Known Interest in Blogging</label>
    <type>Checkbox</type>
</CustomField>