force-app/main/default/objects/Lead/fields/Append_Interest_Books__c.field-meta.xml
<CustomField>
    <fullName>Append_Interest_Books__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchases books; Interest in reading books</description>
    <inlineHelpText>Purchases books; Interest in reading books</inlineHelpText>
    <label>Known Interest in Books</label>
    <type>Checkbox</type>
</CustomField>