force-app/main/default/objects/Lead/fields/Append_Interest_Business__c.field-meta.xml
<CustomField>
    <fullName>Append_Interest_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Interest in business</description>
    <inlineHelpText>Interest in business</inlineHelpText>
    <label>Known Interest in Business</label>
    <type>Checkbox</type>
</CustomField>