force-app/main/default/objects/Lead/fields/Append_Interest_Health_Wellness__c.field-meta.xml
<CustomField>
    <fullName>Append_Interest_Health_Wellness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Interest in healthy lifestyle; purchases healthy lifestyle products</description>
    <inlineHelpText>Interest in healthy lifestyle; purchases healthy lifestyle products</inlineHelpText>
    <label>Known Interest in Health &amp; Wellness</label>
    <type>Checkbox</type>
</CustomField>