force-app/main/default/objects/Lead/fields/Append_Interest_News_Current_Affairs__c.field-meta.xml
<CustomField>
    <fullName>Append_Interest_News_Current_Affairs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchases subscriptions for news &amp; current events.</description>
    <inlineHelpText>Purchases subscriptions for news &amp; current events.</inlineHelpText>
    <label>Known Interest in News &amp; Current Affairs</label>
    <type>Checkbox</type>
</CustomField>