force-app/main/default/objects/Lead/fields/Append_Need_Append__c.field-meta.xml
<CustomField>
    <fullName>Append_Need_Append__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Append Need Append</label>
    <type>Checkbox</type>
</CustomField>