force-app/main/default/objects/Lead/fields/Append_Purchase_Baby_Product_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_Baby_Product_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has bought a baby product in the past 18 months</description>
    <inlineHelpText>Has bought a baby product in the past 18 months</inlineHelpText>
    <label>Baby Product Buyer</label>
    <type>Checkbox</type>
</CustomField>