force-app/main/default/objects/Lead/fields/Append_Purchase_Beauty__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_Beauty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchases beauty products</description>
    <inlineHelpText>Purchases beauty products</inlineHelpText>
    <label>Beauty Product Buyer</label>
    <type>Checkbox</type>
</CustomField>