force-app/main/default/objects/Lead/fields/Append_Purchase_Discount_Shopper__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_Discount_Shopper__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Interested in discounts when buying</description>
    <inlineHelpText>Interested in discounts when buying</inlineHelpText>
    <label>Discount Shopper</label>
    <type>Checkbox</type>
</CustomField>