force-app/main/default/objects/Lead/fields/Append_Purchase_High_End_Brand_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_High_End_Brand_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has bought a premium CPG brand in the past 18 months</description>
    <inlineHelpText>Has bought a premium CPG brand in the past 18 months</inlineHelpText>
    <label>High End Brand Buyer</label>
    <type>Checkbox</type>
</CustomField>