force-app/main/default/objects/Lead/fields/Append_Purchase_Luxury_Goods_Jewelry__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_Luxury_Goods_Jewelry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchases luxury items</description>
    <inlineHelpText>Purchases luxury items</inlineHelpText>
    <label>Luxury Goods &amp; Jewelry Buyer</label>
    <type>Checkbox</type>
</CustomField>