force-app/main/default/objects/Lead/fields/Append_Purchase_Outdoor_Adventure__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_Outdoor_Adventure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchases outdoor &amp; adventure products</description>
    <inlineHelpText>Purchases outdoor &amp; adventure products</inlineHelpText>
    <label>Outdoor &amp; Adventure Buyer</label>
    <type>Checkbox</type>
</CustomField>