force-app/main/default/objects/Lead/fields/Append_Purchase_Technology__c.field-meta.xml
<CustomField>
    <fullName>Append_Purchase_Technology__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purchases technology</description>
    <inlineHelpText>Purchases technology</inlineHelpText>
    <label>Technology Buyer</label>
    <type>Checkbox</type>
</CustomField>