force-app/main/default/objects/Lead/fields/Append_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Append_Run_Date__c</fullName>
    <label>Append Run Date</label>
    <type>DateTime</type>
</CustomField>