force-app/main/default/objects/Lead/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VitaOlefera</fullName>
            </value>
            <value>
                <fullName>Sunology</fullName>
            </value>
            <value>
                <fullName>Arctic4</fullName>
            </value>
            <value>
                <fullName>Cate Mcnabb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>