force-app/main/default/objects/Lead/fields/EAM_Date_First_Seen__c.field-meta.xml
<CustomField>
    <fullName>EAM_Date_First_Seen__c</fullName>
    <description>Dating back to 2006, knowing the date (YYYY-MM-DD) we first saw an email
address can drive fraud prevention algorithms by highlighting addresses that
are newly created or with limited use.</description>
    <inlineHelpText>Dating back to 2006, knowing the date (YYYY-MM-DD) we first saw an email
address can drive fraud prevention algorithms by highlighting addresses that
are newly created or with limited use.</inlineHelpText>
    <label>Date Email First Seen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>