force-app/main/default/objects/Lead/fields/EAM_Month_Last_Opened__c.field-meta.xml
<CustomField>
    <fullName>EAM_Month_Last_Opened__c</fullName>
    <description>Sourced from trusted mailing partners,
TouchCR provides the month and year (in YYYY-MM format) we last saw the
email “open.” Match rates typically range from 30-40% for U.S. data.</description>
    <inlineHelpText>Sourced from trusted mailing partners,
TouchCR provides the month and year (in YYYY-MM format) we last saw the
email “open.” Match rates typically range from 30-40% for U.S. data.</inlineHelpText>
    <label>Month Last Opened</label>
    <length>255</length>
    <type>Text</type>
</CustomField>