force-app/main/default/objects/Lead/fields/EAM_Popularity__c.field-meta.xml
<CustomField>
    <fullName>EAM_Popularity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many other companies are seeing that email address?
The popularity metric calculates the number of sources from whom
TouchCR has seen the email within the past 12 months from
no partners or sources (0) to most popular (10).</description>
    <inlineHelpText>How many other companies are seeing that email address?
The popularity metric calculates the number of sources from whom
TouchCR has seen the email within the past 12 months from
no partners or sources (0) to most popular (10).</inlineHelpText>
    <label>Email Popularity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>