force-app/main/default/objects/Lead/fields/EAM_Velocity__c.field-meta.xml
<CustomField>
    <fullName>EAM_Velocity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How often has that email address been seen recently? Here we analyze an
address’ frequency of activity over the past 3 months from inactive (0) to
most active (10).</description>
    <inlineHelpText>How often has that email address been seen recently? Here we analyze an
address’ frequency of activity over the past 3 months from inactive (0) to
most active (10).</inlineHelpText>
    <label>Email Velocity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>