force-app/main/default/objects/Lead/fields/Email_Box_Valid__c.field-meta.xml
<CustomField>
    <fullName>Email_Box_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether messages to a mailbox will hard bounce, soft bounce or deliver.</description>
    <inlineHelpText>Determines whether messages to a mailbox will hard bounce, soft bounce or deliver.</inlineHelpText>
    <label>Email Inbox is Valid</label>
    <type>Checkbox</type>
</CustomField>