force-app/main/default/objects/Lead/fields/Email_Checked__c.field-meta.xml
<CustomField>
    <fullName>Email_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Checked</label>
    <type>Checkbox</type>
</CustomField>