force-app/main/default/objects/Lead/fields/Email_Corrections__c.field-meta.xml
<CustomField>
    <fullName>Email_Corrections__c</fullName>
    <description>The following is the corrected version of the email address</description>
    <inlineHelpText>The following is the corrected version of the email address</inlineHelpText>
    <label>Correct Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>