force-app/main/default/objects/Lead/fields/Email_Valid__c.field-meta.xml
<CustomField>
    <fullName>Email_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies incorrect email syntax</description>
    <inlineHelpText>Identifies incorrect email syntax</inlineHelpText>
    <label>Email Syntax is Valid</label>
    <type>Checkbox</type>
</CustomField>