force-app/main/default/objects/Lead/fields/IP_Address_Location_City__c.field-meta.xml
<CustomField>
    <fullName>IP_Address_Location_City__c</fullName>
    <label>IP Address Location City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>