force-app/main/default/objects/Lead/fields/IP_Address_Location_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Address_Location_Country_Code__c</fullName>
    <label>IP Address Location Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>