force-app/main/default/objects/Lead/fields/IP_Address_Location_Region__c.field-meta.xml
<CustomField>
    <fullName>IP_Address_Location_Region__c</fullName>
    <label>IP Address Location Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>