force-app/main/default/objects/Lead/fields/Lead_ip__c.field-meta.xml
<CustomField>
    <fullName>Lead_ip__c</fullName>
    <label>Lead IP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>