force-app/main/default/objects/Lead/fields/Referral_Domain__c.field-meta.xml
<CustomField>
    <fullName>Referral_Domain__c</fullName>
    <label>Referral Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>