force-app/main/default/objects/Lead/fields/Sales_Funnel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Funnel__c</fullName>
    <label>Sales Funnel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>