force-app/main/default/objects/Lead/fields/Social_Append_Success__c.field-meta.xml
<CustomField>
    <fullName>Social_Append_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Append Success</label>
    <type>Checkbox</type>
</CustomField>