force-app/main/default/objects/Lead/fields/Sub_Id1__c.field-meta.xml
<CustomField>
    <fullName>Sub_Id1__c</fullName>
    <label>Sub Id1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>