force-app/main/default/objects/Lead/fields/Sub_Id2__c.field-meta.xml
<CustomField>
    <fullName>Sub_Id2__c</fullName>
    <label>Sub Id2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>