force-app/main/default/objects/Lead/fields/Sub_Id3__c.field-meta.xml
<CustomField>
    <fullName>Sub_Id3__c</fullName>
    <label>Sub Id3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>