force-app/main/default/objects/Lead/fields/Terms_And_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_And_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms And Conditions</label>
    <type>Checkbox</type>
</CustomField>