force-app/main/default/objects/Lead/fields/Terms_And_Conditions_Time_Consent__c.field-meta.xml
<CustomField>
    <fullName>Terms_And_Conditions_Time_Consent__c</fullName>
    <label>Terms And Conditions Time Consent</label>
    <type>DateTime</type>
</CustomField>